[workspace]
members = [
    "crates/events",
    "crates/events-macros",
    "crates/monetary",
    "crates/monetary-macros",
]
authors = ["Amit Prasad<mail@amitprasad.dev>"]
description = "Safer CosmWasm contract libraries."
license = "Apache-2.0"
repository = "https://github.com/EntropicLabs/cw-safety"
package.version = "0.0.6"

[workspace.dependencies]
monetary-macros = { path = "crates/monetary-macros", version = "0.0.6" }
monetary = { path = "crates/monetary" }

events = { path = "crates/events" }
cw-events-macros = { path = "crates/events-macros", version = "0.0.6" }

cosmwasm-std = { version = ">=1, <3" }
cosmwasm-schema = { version = ">=1, <3" }
serde = { version = "1.0" }
schemars = { version = "0.8" }
serde-json-wasm = "1.0.1"
