[workspace]
members = [
    "crates/cw-events",
    "crates/cw-events-macros",
    "crates/monetary",
    "crates/monetary-macros",
]
authors = ["Amit Prasad<mail@amitprasad.dev>"]
description = "Safer CosmWasm contract libraries."
license = "Apache-2.0"
repository = "https://github.com/EntropicLabs/cw-safety"
package.version = "0.0.7"

[workspace.dependencies]
monetary-macros = { path = "crates/monetary-macros", version = "0.0.7" }
monetary = { path = "crates/monetary" }

cw-events = { path = "crates/cw-events" }
cw-events-macros = { path = "crates/cw-events-macros", version = "0.0.7" }

cosmwasm-std = { version = ">=1, <3" }
cosmwasm-schema = { version = ">=1, <3" }
serde = { version = "1.0" }
schemars = { version = "0.8" }
serde-json-wasm = "1.0.1"
