[package]
name = "cw-events-macros"
version.workspace = true
authors = ["Amit Prasad<mail@amitprasad.dev>"]
edition = "2021"
description = "Macros for cw-events crate"
license = "Apache-2.0"
repository = "https://github.com/EntropicLabs/cw-safety"

[lib]
proc-macro = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true }
quote = { version = "1.0.36" }
syn = { version = "2.0.64", features = ["full"] }
proc-macro2 = { version = "1.0.82" }
proc-macro-crate = "3.1.0"
